--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 <h3>2018-Now, 23 Papers, 3 Challenge Reports</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>------Postdoctoral------</td></tr> 
 		<tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
 		<tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	
@@ -624,6 +623,9 @@
 			<td> IEEE Transactions on Image Processing (TIP)</td>
 		</tr>
 		<tr>
+			<td> IEEE Transactions on Cybernetics (TCYB)</td>
+		</tr>
+		<tr>
 			<td> IEEE Transactions on Multimedia (TMM)</td>
 		</tr>
 		<tr>
@@ -640,6 +642,10 @@
 		</tr>
 		<tr>
 			<td> IEEE Signal Processing Letters (SPL)</td>
+		</tr>
+		<tr>
+			<td> ...</td>
+		</tr>
 	</tbody>
 </table>
 
@@ -647,6 +653,9 @@
 <h3>Conference Reviewer</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
+		<tr>
+			<td> AIM: Advances in Image Manipulation workshop and challenges</td>
+		</tr>
 		<tr>
 			<td> New Trends in Image Restoration and Enhancement workshop
 				and challenges on image and video processing (NTIRE)</td>
