--- a/index_zw.html
+++ b/index_zw.html
@@ -74,7 +74,6 @@
 <h3>2018-现在，23篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>----------博后期间----------</td></tr> 
 		<tr><td>一篇论文已被 Neurocomputing, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IJCAI, 2022.</td></tr> 
 		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	
@@ -611,6 +610,9 @@
 			<td> IEEE Transactions on Image Processing (TIP)</td>
 		</tr>
 		<tr>
+			<td> IEEE Transactions on Cybernetics (TCYB)</td>
+		</tr>
+		<tr>
 			<td> IEEE Transactions on Multimedia (TMM)</td>
 		</tr>
 		<tr>
@@ -627,6 +629,10 @@
 		</tr>
 		<tr>
 			<td> IEEE Signal Processing Letters (SPL)</td>
+		</tr>
+		<tr>
+			<td> ...</td>
+		</tr>
 	</tbody>
 </table>
 
@@ -634,6 +640,9 @@
 <h3>会议审稿人</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
+		<tr>
+			<td> AIM: Advances in Image Manipulation workshop and challenges</td>
+		</tr>
 		<tr>
 			<td> New Trends in Image Restoration and Enhancement workshop
 				and challenges on image and video processing (NTIRE)</td>
