--- a/index_zw.html
+++ b/index_zw.html
@@ -585,6 +585,9 @@
 			<tr>
 				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022.</a></td>
 			</tr>
+			<tr>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
+			</tr>
 		</tbody>
 </table>
 
