--- a/index_zw.html
+++ b/index_zw.html
@@ -446,7 +446,7 @@
 		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang*.
 		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">口头报告（Oral Presentation）</font><br>
+		<font color="red">口头报告(Oral Presentation). Student Travel Award.</font><br>
 		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[论文]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[海报]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[报告PPT]</a>
