--- a/index.html
+++ b/index.html
@@ -158,9 +158,20 @@
 	</li>
 </ul>
 
+<h2>Fund & Project</h2></ul>
+<ul>
+	<li>
+		NSFC, International (Regional) Cooperation and Exchange Project, 61961160734, Research on Magnetic Resonance Image Enhancement Model and Algorithm Based on Generative Adversarial Learning, 2020-01 to 2023-12, 1,000,000 RMB, Under Research, Participation.
+	</li>
+	<li>
+		NSFC, General Project, 61871185, Research on rapid stitching model and algorithm of remote sensing images, 2019-01 to 2022-12, 630,000 RMB, Under Research, Participation.
+	</li>
+	<li>
+		Doctoral Research Innovation Fund Project, East China Normal University, Research on a Flexible and Efficient Real Image Super-Resolution Reconstruction Framework, 2020-06 to 2021-10, 6000 RMB, Concluded, Principal.
+	</li>
+</ul>
 
-
-<h2>Selected Publications [Total Citations: 948] [Highest Citation: 464] </h2>
+<h2>Selected Publications [Total Citations: 952] [Highest Citation: 465] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
