--- a/index_zw.html
+++ b/index_zw.html
@@ -155,8 +155,21 @@
 </ul>
 
 
+<h2>基金项目</h2></ul>
+<ul>
+	<li>
+		国家自然科学基金委员会, 国际(地区)合作与交流项目, 61961160734, 基于生成对抗学习的磁共振图像增强模型与算法研究, 2020-01 至 2023-12, 100万元, 在研, 参与。
+	</li>
+	<li>
+		国家自然科学基金委员会, 面上项目, 61871185, 遥感图像快速拼接模型与算法研究, 2019-01 至 2022-12, 63万元, 在研, 参与。
+	</li>
+	<li>
+		华东师范大学博士生科研创新基金项目, 一种灵活高效的真实图像超分辨率重建框架研究, 2020-06 至 2021-10, 6000元, 结题, 主持。
+	</li>
+</ul>
 
-<h2>精选出版物 [总引用: 948] [最高引用: 464] </h2>
+
+<h2>精选出版物 [总引用: 952] [最高引用: 465] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
