--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
 		Research Assistant (RA)<br>
 		Topic: Medical Image Segmentation & Research on Uncertainty in Deep Learning<br>
-		Supervisor: Prof. <a href="http://www.hebmlc.org/", target="_blank">Xizhao Wang</a> (IEEE Fellow, CAAI Fellow, JMLC Editor-in-Chief)<br>
+		Supervisor: Prof. <a href="http://www.hebmlc.org/", target="_blank">Xizhao Wang</a> (IEEE Fellow, CAAI Fellow, IJMLC Editor-in-Chief)<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div><br>
