--- a/index_zw.html
+++ b/index_zw.html
@@ -138,7 +138,7 @@
 		<div style="text-align:left">深圳大学, 深圳 </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div>
 		职位: 研究助理<br>
 		研究内容: 医学图像分割、深度学习中的不确定性研究<br>
-		主管: <a href="http://www.hebmlc.org/", target="_blank">王熙照</a> 教授 (IEEE Fellow, CAAI Fellow, JMLC 主编)<br>
+		主管: <a href="http://www.hebmlc.org/", target="_blank">王熙照</a> 教授 (IEEE Fellow, CAAI Fellow, IJMLC 主编)<br>
 	</li>
 	<li>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div>
