--- a/index.html
+++ b/index.html
@@ -591,6 +591,15 @@
 
 <h2>Academic Services</h2>
 
+<h3>Guest Editor</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition" on the Journal of Mathematics.</a></td>
+		</tr>
+	</tbody>
+</table>
+
 <h3>Co-Organizer</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
