--- a/index_zw.html
+++ b/index_zw.html
@@ -578,6 +578,14 @@
 
 
 <h2>学术服务</h2>
+<h3>客座编辑</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition" on the Journal of Mathematics.</a></td>
+		</tr>
+	</tbody>
+</table>
 
 <h3>组织者</h3>
 <table id="tbTeaching" border="0" width="100%">
