--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 <h3>2018-Now, 23 Papers, 3 Challenge Reports</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by ACM TOMM, 2022.</td></tr> 
 		<tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
 		<tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	
@@ -171,7 +172,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1092] [Highest Citation: 501] </h2>
+<h2>Selected Publications [Total Citations: 1104] [Highest Citation: 504] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
