--- a/index_zw.html
+++ b/index_zw.html
@@ -74,6 +74,7 @@
 <h3>2018-现在，23篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 ACM TOMM, 2022.</td></tr> 
 		<tr><td>一篇论文已被 Neurocomputing, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IJCAI, 2022.</td></tr> 
 		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	
@@ -168,7 +169,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1092] [最高引用: 501] </h2>
+<h2>精选出版物 [总引用: 1104] [最高引用: 504] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
