--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
 					<h1>Juncheng Li (李俊诚)</h1> 
 				</div>
 
-				<h3> Postdoctoral Fellow </h3>
 				<p>
 					<a href="http://cmai.math.cuhk.edu.hk/index.html">Center for Mathematical Artificial Intelligence (CMAI)</a>, <br>
-					Department of Mathematics,<br>
-					The Chinese University of Hong Kong,<br>
-					G07, Lady Shaw Building, CUHK, Shatin, N.T., Hong Kong.<br>
+					School of Communication & Information Engineering,<br>
+					Shanghai University,<br>
+					Xiangying Building, Baoshan, Shanghai.<br>
 					<br>
-					Email: cvjunchengli[at]gmail.com  &  junchengli[at]math.cuhk.edu.hk  	       
+					Email: cvjunchengli[at]gmail.com  &  junchengli[at]math.cuhk.edu.hk  & junchengli@shu.edu.cn  	       
 				</p>
 
 				<br>
@@ -68,7 +67,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the PhD from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). I have published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. I received several premium awards, including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 20 international journals/conferences, including TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL. If you are interested in my research or have any questions, feel free to contact me!
+	Dr. Juncheng Li received the PhD from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. He also serves as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching and image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. He received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also served as a reviewer for more than 20 international journals/conferences, including CVPR, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL. If you are interested in my research or have any questions, feel free to contact me!
 </p>
 
 
@@ -172,7 +171,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1110] [Highest Citation: 507] </h2>
+<h2>Selected Publications [Total Citations: 1139] [Highest Citation: 516] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
@@ -681,7 +680,10 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> AIM: Advances in Image Manipulation workshop and challenges</td>
+			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
+		</tr>
+		<tr>
+			<td> Advances in Image Manipulation workshop and challenges (AIM)</td>
 		</tr>
 		<tr>
 			<td> New Trends in Image Restoration and Enhancement workshop
