--- a/index_zw.html
+++ b/index_zw.html
@@ -34,13 +34,12 @@
 					<h1>李俊诚 (Li Juncheng)</h1> 
 				</div>
 
-				<h3> 博后研究员 </h3>
 				<p>
 					<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>，<br>
-					数学系，香港中文大学，<br>
-					香港，新界，沙田，香港中文大学，邵逸夫夫人楼，G07室.<br>
+					通信与信息工程学院，上海大学，<br>
+					翔英大楼楼，宝山，上海<br>
 					<br>
-					邮箱: cvjunchengli[at]gmail.com  &  junchengli[at]math.cuhk.edu.hk 	       
+					邮箱: cvjunchengli[at]gmail.com  &  junchengli[at]math.cuhk.edu.hk 	& junchengli@shu.edu.cn       
 				</p>
 
 				<br>
@@ -64,7 +63,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授 共同指导。我的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。我在著名的期刊和会议上发表了20余篇论文，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个国际期刊会议审稿人。如果您对我的研究感兴趣或有任何疑问，请随时与我联系！
+	我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。我还担任香港中文大学博后研究员，我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。我在著名的期刊和会议上发表了20余篇论文，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我获曾获得2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括CVPR、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个国际期刊/会议审稿人。如果您对我的研究感兴趣或有任何疑问，请随时与我联系！
 </p>
 
 <h2>最新消息</h2>
@@ -169,7 +168,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1110] [最高引用: 507] </h2>
+<h2>精选出版物 [总引用: 1139] [最高引用: 516] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
@@ -668,7 +667,10 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> AIM: Advances in Image Manipulation workshop and challenges</td>
+			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
+		</tr>
+		<tr>
+			<td> Advances in Image Manipulation workshop and challenges (AIM)</td>
 		</tr>
 		<tr>
 			<td> New Trends in Image Restoration and Enhancement workshop
