--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					Shanghai University,<br>
 					Xiangying Building, Baoshan, Shanghai.<br>
 					<br>
-					Email: cvjunchengli[at]gmail.com  &  junchengli[at]math.cuhk.edu.hk  & junchengli@shu.edu.cn  	       
+					Email: cvjunchengli[at]gmail.com  & junchengli[at]shu.edu.cn  	       
 				</p>
 
 				<br>
