--- a/index_zw.html
+++ b/index_zw.html
@@ -35,8 +35,8 @@
 				</div>
 
 				<p>
-					通信与信息工程学院，上海大学<br>
-					翔英大楼楼，宝山，上海<br>
+					上海大学-通信与信息工程学院<br>
+					上海，宝山区，翔英大楼<br>
 					<br>
 					邮箱: cvjunchengli[at]gmail.com  & junchengli[at]shu.edu.cn       
 				</p>
