--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, ECNU, East China Normal University, The Chinese University of Hong Kong, 李俊诚, 俊诚, 华东师范大学, 香港中文大学"> 
+<meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, East China Normal University, The Chinese University of Hong Kong, Shanghai University, 李俊诚, 俊诚, 华东师范大学, 香港中文大学，上海大学"> 
 <meta name="description" content="Juncheng Li's home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
@@ -66,7 +66,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li received the PhD from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. He also serves as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching and image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. He received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also served as a reviewer for more than 20 international journals/conferences, including CVPR, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL. If you are interested in my research or have any questions, feel free to contact me!
+	Dr. Juncheng Li received the PhD from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. He also serves as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a>. His research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). He has published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. He received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also served as a reviewer for more than 20 international journals/conferences, including CVPR, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL.
 </p>
 
 
@@ -116,9 +116,9 @@
 		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020. (0.5%)</td></tr> 	
 		<tr><td>Outstanding Student, East China Normal University, 2020. (3.0%)</td></tr> 	
 		<tr><td>Wisdom Scholarship, East China Normal University, 2020. (1.5%)</td></tr> 	
-		<tr><td>Doctoral Research and Innovation Fund Project, East China Normal University, 2020.</td></tr> 	
+		<tr><td>Doctoral Research and Innovation Fund Project, East China Normal University, 2020.</td></tr> 
+		<tr><td>ICCV Student Travel Award, 2019.</td></tr> 		
 		<tr><td>Graduate Scholarship, East China Normal University, 2016-2020.</td></tr> 	
-		<tr><td>ICCV Student Travel Award, 2019.</td></tr> 	
 		<tr><td> The 1st place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 2: Perceptual. <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> The 2nd place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 1: Fidelity. <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> The 4th place and "Geek Award" in Alibaba - <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"Youku Video Enhancement and Super Resolution Challenge"</a> <b>(4/1514)</b>, 2019.</td></tr>
@@ -160,17 +160,20 @@
 <h2>Fund & Project</h2></ul>
 <ul>
 	<li>
+		Key Laboratory Open Projects, Research on low-quality face restoration and recognition in real scenes, 2022-11 to 2023-12, Under Research, Principal.
+	</li>
+	<li>
 		NSFC, International (Regional) Cooperation and Exchange Project, 61961160734, Research on Magnetic Resonance Image Enhancement Model and Algorithm Based on Generative Adversarial Learning, 2020-01 to 2023-12, 1,000,000 RMB, Under Research, Participation.
 	</li>
 	<li>
 		NSFC, General Project, 61871185, Research on rapid stitching model and algorithm of remote sensing images, 2019-01 to 2022-12, 630,000 RMB, Under Research, Participation.
 	</li>
 	<li>
-		Doctoral Research Innovation Fund Project, East China Normal University, Research on a Flexible and Efficient Real Image Super-Resolution Reconstruction Framework, 2020-06 to 2021-10, 6000 RMB, Concluded, Principal.
+		Doctoral Research Innovation Fund Project, East China Normal University, Research on a Flexible and Efficient Real Image Super-Resolution Reconstruction Framework, 2020-06 to 2021-10, Concluded, Principal.
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1139] [Highest Citation: 516] </h2>
+<h2>Selected Publications [Total Citations: 1154] [Highest Citation: 518] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Preprint Papers</h4>
@@ -715,7 +718,7 @@
 	</tbody>
 </table>
 
-<h2>Keynotes</h2>
+<!-- <h2>Keynotes</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>	
@@ -752,7 +755,7 @@
 			</td>
 		</tr>
 	</tbody>
-</table>
+</table> -->
 
 <h2>Collaborators</h2>
 <table id="tbTeaching" border="0" width="100%">
