--- a/index_zw.html
+++ b/index_zw.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, ECNU, East China Normal University, The Chinese University of Hong Kong, 李俊诚, 俊诚, 华东师范大学, 香港中文大学"> 
+<meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, East China Normal University, The Chinese University of Hong Kong, Shanghai University, 李俊诚, 俊诚, 华东师范大学, 香港中文大学, 上海大学"> 
 <meta name="description" content="李俊诚的主页">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
@@ -62,7 +62,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。我还担任香港中文大学博后研究员，我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。我在著名的期刊和会议上发表了20余篇论文，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我曾获得2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括CVPR、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个国际期刊/会议审稿人。如果您对我的研究感兴趣或有任何疑问，请随时与我联系！
+	我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。我还担任香港中文大学博后研究员，我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学影像处理）中的应用。我在知名的期刊和会议上已发表论文20余篇，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我曾获得2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括CVPR、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个国际期刊/会议审稿人。
 </p>
 
 <h2>最新消息</h2>
@@ -113,8 +113,8 @@
 		<tr><td>优秀学生称号, 华东师范大学, 2020. (3.0%)</td></tr> 	
 		<tr><td>智慧奖学金, 华东师范大学, 2020. (1.5%)</td></tr> 	
 		<tr><td>博士生科研创新基金项目, 华东师范大学, 2020.</td></tr> 	
-		<tr><td>研究生奖学金, 华东师范大学, 2016-2020.</td></tr> 	
 		<tr><td>ICCV学生旅行资助, 2019.</td></tr> 	
+		<tr><td>研究生奖学金, 华东师范大学, 2016-2020.</td></tr> 	
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的感知赛道的全球第一名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的保真赛道的全球第二名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> 获得<a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"阿里巴巴 - 优酷视频增强和超分辨率挑战赛"</a>全国第四名 和 “极客奖”, <b>(4/1514)</b>, 2019.</td></tr>
@@ -157,17 +157,20 @@
 <h2>基金项目</h2></ul>
 <ul>
 	<li>
+		重点实验室开放课题, 真实场景下的低质量人脸复原及识别研究, 2022-11 至 2023-12, 在研, 主持。
+	</li>
+	<li>
 		国家自然科学基金委员会, 国际(地区)合作与交流项目, 61961160734, 基于生成对抗学习的磁共振图像增强模型与算法研究, 2020-01 至 2023-12, 100万元, 在研, 参与。
 	</li>
 	<li>
 		国家自然科学基金委员会, 面上项目, 61871185, 遥感图像快速拼接模型与算法研究, 2019-01 至 2022-12, 63万元, 在研, 参与。
 	</li>
 	<li>
-		华东师范大学博士生科研创新基金项目, 一种灵活高效的真实图像超分辨率重建框架研究, 2020-06 至 2021-10, 6000元, 结题, 主持。
+		华东师范大学博士生科研创新基金项目, 一种灵活高效的真实图像超分辨率重建框架研究, 2020-06 至 2021-10, 结题, 主持。
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1139] [最高引用: 516] </h2>
+<h2>精选出版物 [总引用: 1154] [最高引用: 518] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
@@ -703,7 +706,7 @@
 </table>
 
 
-<h2>主题演讲</h2>
+<!-- <h2>主题演讲</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>	
@@ -740,7 +743,7 @@
 			</td>
 		</tr>
 	</tbody>
-</table>
+</table> -->
 
 <h2>合作者</h2>
 <table id="tbTeaching" border="0" width="100%">
