--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
-		<font color="red">Top artificial intelligence conference. Short Oral Presentation</font><br>
+		<font color="red">Top artificial intelligence conference. Oral Presentation</font><br>
 		<a href="paper/IJCAI2022.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[Code]</a>
 		<a href="https://guangweigao.github.io/IJCAI22/LBNet.html", target="_blank">[Homepage]</a>
@@ -669,6 +669,9 @@
 			<td> Knowledge-Based Systems (KBS)</td>
 		</tr>
 		<tr>
+			<td> Computer Vision and Image Understanding (CVIU)</td>
+		</tr>
+		<tr>
 			<td> IEEE Signal Processing Letters (SPL)</td>
 		</tr>
 		<tr>
@@ -693,6 +696,9 @@
 		</tr>
 		<tr>
 			<td> IEEE International Conference on Multimedia & Expo (ICME)</td>
+		</tr>
+		<tr>
+			<td> International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</td>
 		</tr>
 		<tr>
 			<td> The British Machine Vision Conference (BMVC)</td>
