--- a/index_zw.html
+++ b/index_zw.html
@@ -441,7 +441,7 @@
 		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
-		<font color="red">人工智能顶会. 短口头报告（Short Oral Presentation）</font><br>
+		<font color="red">人工智能顶会. 口头报告（Oral Presentation）</font><br>
 		<a href="paper/IJCAI2022.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[代码]</a>
 		<a href="https://guangweigao.github.io/IJCAI22/LBNet.html", target="_blank">[主页]</a>
@@ -656,6 +656,9 @@
 			<td> Knowledge-Based Systems (KBS)</td>
 		</tr>
 		<tr>
+			<td> Computer Vision and Image Understanding (CVIU)</td>
+		</tr>
+		<tr>
 			<td> IEEE Signal Processing Letters (SPL)</td>
 		</tr>
 		<tr>
@@ -680,6 +683,9 @@
 		</tr>
 		<tr>
 			<td> IEEE International Conference on Multimedia & Expo (ICME)</td>
+		</tr>
+		<tr>
+			<td> International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</td>
 		</tr>
 		<tr>
 			<td> The British Machine Vision Conference (BMVC)</td>
