--- a/index_zw.html
+++ b/index_zw.html
@@ -584,6 +584,13 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://ietresearch.onlinelibrary.wiley.com/hub/journal/17519640/homepage/cfp", target="_blank">Special issue "Advanced Image Restoration and Enhancement in the Wild" on IET Computer Version.</a></td>
+		</tr>
+	</tbody>
+</table>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
 			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition" on the Journal of Mathematics.</a></td>
 		</tr>
 	</tbody>
