--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. He also serves as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). He has published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. He received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also served as a reviewer for more than 30 international journals/conferences, including CVPR, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL.
+	Dr. Juncheng Li received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. He also serves as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). He has published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. He received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also served as a reviewer for more than 30 international journals/conferences, including CVPR, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL.
 </p>
 
 
@@ -179,6 +179,20 @@
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2212.14181.pdf" target="_blank">Efficient Image Super-Resolution with Feature Interaction Weighted Hybrid Network</a><br>
+		<b>Wenjie Li#, Juncheng Li#, Guangwei Gao*, Weihong Deng, Jian Yang, Guo-Jun Qi, and Chia-Wen Lin
+		<p><em>arXiv 2212.14181</em>, 2023.<br>
+		<a href="paper/FIWHN_2023.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -599,10 +613,6 @@
 		<tr>
 			<td> <a href="https://ietresearch.onlinelibrary.wiley.com/hub/journal/17519640/homepage/cfp", target="_blank">Special issue "Advanced Image Restoration and Enhancement in the Wild" on IET Computer Version.</a></td>
 		</tr>
-	</tbody>
-</table>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
 		<tr>
 			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition" on the Journal of Mathematics.</a></td>
 		</tr>
@@ -664,6 +674,9 @@
 			<td> IEEE Transactions on Multimedia (TMM)</td>
 		</tr>
 		<tr>
+			<td> IEEE Transactions on Broadcasting (TB)</td>
+		</tr>
+		<tr>
 			<td> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</td>
 		</tr>
 		<tr>
@@ -713,6 +726,9 @@
 		<tr>
 			<td>International Conference on Pattern Recognition (ICPR)</td>
 		</tr>
+		<tr>
+			<td> ...</td>
+		</tr>
 	</tbody>
 </table>
 
@@ -726,7 +742,7 @@
 			<td> Founder of <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> </td>
 		</tr> -->
 		<tr>
-			<td> Founder of CLF Studio 【A non-profit student innovation studio】</td>
+			<td> Founder of CLF Studio</td>
 		</tr>
 	</tbody>
 </table>
@@ -774,9 +790,9 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>	
-			<td><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></td>
-			<td><a href="https://kfmei.page/", target="_blank">Kangfu Mei</a></td>
+			<td><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong ZENG</a></td>
 			<td><a href="https://guangweigao.github.io/", target="_blank">Guangwei Gao</a></td>
+			<td><a href="https://kfmei.page/", target="_blank">Kangfu Mei</a></td>
 			<td><a href="https://longguangwang.github.io/", target="_blank">Longguang Wang</a></td>
 			<td><a href="https://yingqianwang.github.io/", target="_blank">Yingqian Wang</a></td>
 		</tr>
@@ -854,7 +870,7 @@
  <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2022-11
+&copy; Juncheng Li | Last updated: 2023-1
 </center>
 </p>
 
