--- a/index_zw.html
+++ b/index_zw.html
@@ -178,6 +178,20 @@
 	<tbody>
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2212.14181.pdf" target="_blank">Efficient Image Super-Resolution with Feature Interaction Weighted Hybrid Network</a><br>
+		<b>Wenjie Li#, Juncheng Li#, Guangwei Gao*, Weihong Deng, Jian Yang, Guo-Jun Qi, and Chia-Wen Lin
+		<p><em>arXiv 2212.14181</em>, 2023.<br>
+		<a href="paper/FIWHN_2023.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">From Beginner to Master: A Survey for Deep Learning-based Single-Image Super-Resolution</a><br>
@@ -586,10 +600,6 @@
 		<tr>
 			<td> <a href="https://ietresearch.onlinelibrary.wiley.com/hub/journal/17519640/homepage/cfp", target="_blank">Special issue "Advanced Image Restoration and Enhancement in the Wild" on IET Computer Version.</a></td>
 		</tr>
-	</tbody>
-</table>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
 		<tr>
 			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition" on the Journal of Mathematics.</a></td>
 		</tr>
@@ -651,6 +661,9 @@
 			<td> IEEE Transactions on Multimedia (TMM)</td>
 		</tr>
 		<tr>
+			<td> IEEE Transactions on Broadcasting (TB)</td>
+		</tr>
+		<tr>
 			<td> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</td>
 		</tr>
 		<tr>
@@ -700,6 +713,9 @@
 		<tr>
 			<td>International Conference on Pattern Recognition (ICPR)</td>
 		</tr>
+		<tr>
+			<td> ...</td>
+		</tr>
 	</tbody>
 </table>
 
@@ -713,7 +729,7 @@
 			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 发起人</td>
 		</tr> -->
 		<tr>
-			<td> 丛林蜂工作室（CLF Studio）创始人【非营利学生创新工作室】</td>
+			<td> 丛林蜂工作室（CLF Studio）创始人</td>
 		</tr>
 	</tbody>
 </table>
@@ -762,9 +778,9 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>	
-			<td><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></td>
-			<td><a href="https://kfmei.page/", target="_blank">Kangfu Mei</a></td>
+			<td><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong ZENG</a></td>
 			<td><a href="https://guangweigao.github.io/", target="_blank">Guangwei Gao</a></td>
+			<td><a href="https://kfmei.page/", target="_blank">Kangfu Mei</a></td>
 			<td><a href="https://longguangwang.github.io/", target="_blank">Longguang Wang</a></td>
 			<td><a href="https://yingqianwang.github.io/", target="_blank">Yingqian Wang</a></td>
 		</tr>
@@ -840,7 +856,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div> -->     
 <br>
-&copy; 李俊诚 | 最后更新: 2022-11
+&copy; 李俊诚 | 最后更新: 2023-1
 </center>
 </p>
 
