--- a/index_zw.html
+++ b/index_zw.html
@@ -181,7 +181,7 @@
 		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://arxiv.org/pdf/2212.14181.pdf" target="_blank">Efficient Image Super-Resolution with Feature Interaction Weighted Hybrid Network</a><br>
-		<b>Wenjie Li#, Juncheng Li#, Guangwei Gao*, Weihong Deng, Jian Yang, Guo-Jun Qi, and Chia-Wen Lin
+		Wenjie Li#, <b>Juncheng Li#</b>, Guangwei Gao*, Weihong Deng, Jian Yang, Guo-Jun Qi, and Chia-Wen Lin
 		<p><em>arXiv 2212.14181</em>, 2023.<br>
 		<a href="paper/FIWHN_2023.pdf", target="_blank">[Paper]</a>
 		</td>
