--- a/index_zw.html
+++ b/index_zw.html
@@ -62,7 +62,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。我还担任香港中文大学博后研究员，我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学影像处理）中的应用。我在知名的期刊和会议上已发表论文20余篇，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我曾获得2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括CVPR、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的30多个国际期刊/会议审稿人。
+	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。我还曾担任香港中文大学博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学影像处理）中的应用。我在知名的期刊和会议上已发表论文20余篇，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我曾获得2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括CVPR、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的30多个国际期刊/会议审稿人。
 </p>
 
 <h2>最新消息</h2>
