--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <h2>Research Experience</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2021.07.05--Now</div><br>
+		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2021--2022</div><br>
 		<a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">Postdoctoral Fellow</a><br>
 		Topic: Image resolution and medical image reconstruction<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a><br>
@@ -159,25 +159,30 @@
 </ul>
 
 <h2>Fund & Project</h2></ul>
+<h3>Principal</h3>
 <ul>
 	<li>
 		Key Laboratory Open Projects, Research on low-quality face restoration and recognition in real scenes, 2022-11 to 2023-12, Under Research, Principal.
-	</li>
-	<li>
-		NSFC, International (Regional) Cooperation and Exchange Project, 61961160734, Research on Magnetic Resonance Image Enhancement Model and Algorithm Based on Generative Adversarial Learning, 2020-01 to 2023-12, 1,000,000 RMB, Under Research, Participation.
-	</li>
-	<li>
-		NSFC, General Project, 61871185, Research on rapid stitching model and algorithm of remote sensing images, 2019-01 to 2022-12, 630,000 RMB, Under Research, Participation.
 	</li>
 	<li>
 		Doctoral Research Innovation Fund Project, East China Normal University, Research on a Flexible and Efficient Real Image Super-Resolution Reconstruction Framework, 2020-06 to 2021-10, Concluded, Principal.
 	</li>
 </ul>
 
+<h3>Participation</h3>
+<ul>
+	<li>
+		NSFC, International (Regional) Cooperation and Exchange Project, 61961160734, Research on Magnetic Resonance Image Enhancement Model and Algorithm Based on Generative Adversarial Learning, 2020-01 to 2023-12, 1,000,000 RMB, Under Research, Participation.
+	</li>
+	<li>
+		NSFC, General Project, 61871185, Research on rapid stitching model and algorithm of remote sensing images, 2019-01 to 2022-12, 630,000 RMB, Under Research, Participation.
+	</li>
+</ul>
+
 <h2>Selected Publications [Total Citations: 1249] [Highest Citation: 544] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
-<h4>Preprint Papers</h4>
+<h4>Selected Preprint Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -255,7 +260,7 @@
 	<tr></tr>
  </tbody></table>
 
-<h4>Journal Papers</h4>
+<h4>Selected Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
     <tr>	
@@ -383,7 +388,7 @@
 
 
 
-<h4>Conference Papers</h4></table>
+<h4>Selected Conference Papers</h4></table>
 <table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
