--- a/index_zw.html
+++ b/index_zw.html
@@ -129,7 +129,7 @@
 <h2>科研经历</h2>
 <ul>
 	<li>
-		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2021.07.05--现在</div>
+		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2021--2022</div>
 		职位: <a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">博后研究员</a><br><br>
 		研究内容: 图像复原和MRI图像重建<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授和<a href="http://lokminglui.com/", target="_blank">雷乐铭</a> 教授<br>
@@ -156,25 +156,30 @@
 
 
 <h2>基金项目</h2></ul>
+<h3>主持</h3>
 <ul>
 	<li>
 		重点实验室开放课题, 真实场景下的低质量人脸复原及识别研究, 2022-11 至 2023-12, 在研, 主持。
-	</li>
-	<li>
-		国家自然科学基金委员会, 国际(地区)合作与交流项目, 61961160734, 基于生成对抗学习的磁共振图像增强模型与算法研究, 2020-01 至 2023-12, 100万元, 在研, 参与。
-	</li>
-	<li>
-		国家自然科学基金委员会, 面上项目, 61871185, 遥感图像快速拼接模型与算法研究, 2019-01 至 2022-12, 63万元, 在研, 参与。
 	</li>
 	<li>
 		华东师范大学博士生科研创新基金项目, 一种灵活高效的真实图像超分辨率重建框架研究, 2020-06 至 2021-10, 结题, 主持。
 	</li>
 </ul>
 
+<h3>参与</h3>
+<ul>
+	<li>
+		国家自然科学基金委员会, 国际(地区)合作与交流项目, 61961160734, 基于生成对抗学习的磁共振图像增强模型与算法研究, 2020-01 至 2023-12, 100万元, 在研, 参与。
+	</li>
+	<li>
+		国家自然科学基金委员会, 面上项目, 61871185, 遥感图像快速拼接模型与算法研究, 2019-01 至 2022-12, 63万元, 在研, 参与。
+	</li>
+</ul>
+
 <h2>精选出版物 [总引用: 1249] [最高引用: 544] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
-<h4>预印本</h4>
+<h4>精选预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -249,7 +254,7 @@
 	</tr>
 </tbody></table>
 
-<h4>期刊论文</h4>
+<h4>精选期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
     <tr>	
@@ -374,7 +379,7 @@
 	<tr></tr>
 </tbody></table>
 
-<h4>会议论文</h4></table>
+<h4>精选会议论文</h4></table>
 <table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
