--- a/index.html
+++ b/index.html
@@ -162,20 +162,20 @@
 <h3>Principal</h3>
 <ul>
 	<li>
-		Key Laboratory Open Projects, Research on low-quality face restoration and recognition in real scenes, 2022-11 to 2023-12, Under Research, Principal.
+		Research on low-quality face restoration and recognition in real scenes, Key Laboratory Open Projects, Under Research, Principal.
 	</li>
 	<li>
-		Doctoral Research Innovation Fund Project, East China Normal University, Research on a Flexible and Efficient Real Image Super-Resolution Reconstruction Framework, 2020-06 to 2021-10, Concluded, Principal.
+		Research on a Flexible and Efficient Real Image Super-Resolution Reconstruction Framework, Doctoral Research Innovation Fund Project (ECNU), Concluded, Principal.
 	</li>
 </ul>
 
 <h3>Participation</h3>
 <ul>
 	<li>
-		NSFC, International (Regional) Cooperation and Exchange Project, 61961160734, Research on Magnetic Resonance Image Enhancement Model and Algorithm Based on Generative Adversarial Learning, 2020-01 to 2023-12, 1,000,000 RMB, Under Research, Participation.
+		Research on Magnetic Resonance Image Enhancement Model and Algorithm Based on Generative Adversarial Learning, International (Regional) Cooperation and Exchange Project (NSFC), Under Research, Participation.
 	</li>
 	<li>
-		NSFC, General Project, 61871185, Research on rapid stitching model and algorithm of remote sensing images, 2019-01 to 2022-12, 630,000 RMB, Under Research, Participation.
+		Research on rapid stitching model and algorithm of remote sensing images, General Project (NSFC), Under Research, Participation.
 	</li>
 </ul>
 
