--- a/index_zw.html
+++ b/index_zw.html
@@ -159,20 +159,20 @@
 <h3>主持</h3>
 <ul>
 	<li>
-		重点实验室开放课题, 真实场景下的低质量人脸复原及识别研究, 2022-11 至 2023-12, 在研, 主持。
+		真实场景下的低质量人脸复原及识别研究, 重点实验室开放课题, 在研, 主持。
 	</li>
 	<li>
-		华东师范大学博士生科研创新基金项目, 一种灵活高效的真实图像超分辨率重建框架研究, 2020-06 至 2021-10, 结题, 主持。
+		一种灵活高效的真实图像超分辨率重建框架研究, 华东师范大学博士生科研创新基金项目, 结题, 主持。
 	</li>
 </ul>
 
 <h3>参与</h3>
 <ul>
 	<li>
-		国家自然科学基金委员会, 国际(地区)合作与交流项目, 61961160734, 基于生成对抗学习的磁共振图像增强模型与算法研究, 2020-01 至 2023-12, 100万元, 在研, 参与。
+		基于生成对抗学习的磁共振图像增强模型与算法研究, 国家自然科学基金-国际(地区)合作与交流项目, 在研, 参与。
 	</li>
 	<li>
-		国家自然科学基金委员会, 面上项目, 61871185, 遥感图像快速拼接模型与算法研究, 2019-01 至 2022-12, 63万元, 在研, 参与。
+		遥感图像快速拼接模型与算法研究, 国家自然科学基金-面上项目, 在研, 参与。
 	</li>
 </ul>
 
