--- a/index_zw.html
+++ b/index_zw.html
@@ -69,9 +69,10 @@
 
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
-<h3>2018-现在，24篇论文，3篇比赛报告</h3>
+<h3>2018-现在，25篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 ICASSP, 2023.</td></tr> 
 		<tr><td>一篇论文已被 ACM TOMM, 2022.</td></tr> 
 		<tr><td>--------------------</td></tr> 
 		<tr><td>一篇论文已被 Neurocomputing, 2022.</td></tr> 
@@ -176,7 +177,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1318] [最高引用: 560] </h2>
+<h2>精选出版物 [总引用: 1330] [最高引用: 564] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
