--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
 <h2>News</h2>
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
-<h3>2018-Now, 25 Papers, 3 Challenge Reports</h3>
+<h3>2018-Now, 26 Papers, 3 Challenge Reports</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by IEEE TITS, 2023.</td></tr> 
 		<tr><td>One paper is accepted by ICASSP, 2023.</td></tr> 
 		<tr><td>One paper is accepted by ACM TOMM, 2022.</td></tr> 
 		<tr><td>--------------------</td></tr> 
@@ -180,7 +181,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1330] [Highest Citation: 564] </h2>
+<h2>Selected Publications [Total Citations: 1340] [Highest Citation: 567] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
