--- a/index_zw.html
+++ b/index_zw.html
@@ -69,14 +69,15 @@
 
 <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
-<h3>2018-现在，25篇论文，3篇比赛报告</h3>
+<h3>2018-现在，26篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>一篇论文已被 ICASSP, 2023.</td></tr> 
-		<tr><td>一篇论文已被 ACM TOMM, 2022.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TITS接收, 2023.</td></tr> 
+		<tr><td>一篇论文已被 ICASSP接收, 2023.</td></tr> 
+		<tr><td>一篇论文已被 ACM TOMM接收, 2022.</td></tr> 
 		<tr><td>--------------------</td></tr> 
-		<tr><td>一篇论文已被 Neurocomputing, 2022.</td></tr> 
-		<tr><td>一篇论文已被 IJCAI, 2022.</td></tr> 
+		<tr><td>一篇论文已被 Neurocomputing接收, 2022.</td></tr> 
+		<tr><td>一篇论文已被 IJCAI接收, 2022.</td></tr> 
 		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	
 		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
@@ -177,7 +178,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1330] [最高引用: 564] </h2>
+<h2>精选出版物 [总引用: 1340] [最高引用: 567] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
