--- a/index_zw.html
+++ b/index_zw.html
@@ -161,15 +161,11 @@
 <h3>主持</h3>
 <ul>
 	<li>
-		真实场景下的低质量人脸复原及识别研究, 重点实验室开放课题, 在研, 主持。
+		面向真实场景低质量图像的复原与分割一体化智能模型研究, 上海市启明星（杨帆专项）, 在研, 主持。
 	</li>
 	<li>
-		一种灵活高效的真实图像超分辨率重建框架研究, 华东师范大学博士生科研创新基金项目, 结题, 主持。
+		真实场景下的低质量人脸复原及识别研究, 江苏省社会安全图像与视频理解重点实验室, 在研, 主持。
 	</li>
-</ul>
-
-<h3>参与</h3>
-<ul>
 	<li>
 		基于生成对抗学习的磁共振图像增强模型与算法研究, 国家自然科学基金-国际(地区)合作与交流项目, 在研, 参与。
 	</li>
@@ -178,7 +174,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1340] [最高引用: 567] </h2>
+<h2>精选出版物 [总引用: 1342] [最高引用: 567] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
